--- a/FocusRandonGenerator.Api/appsettings.json
+++ b/FocusRandonGenerator.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RandomNumberDBConnection": "Server=(localdb)\\mssqllocaldb;Database=RandomNumberDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
