--- a/Focus.RandomGenerator.DataEntitiyRepository/Focus.RandomGenerator.DataEntityRepository.csproj
+++ b/Focus.RandomGenerator.DataEntitiyRepository/Focus.RandomGenerator.DataEntityRepository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,8 +6,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Focus.RandomGenerator.DataEntityInterface\Focus.RandomGenerator.DataEntityInterface.csproj" />
-    <ProjectReference Include="..\Focus.RandomGenerator.Models\Focus.RandomGenerator.Models.csproj" />
-    <ProjectReference Include="..\FocusRandomGenerator.Interface\FocusRandomGenerator.Interface.csproj" />
   </ItemGroup>
 
 </Project>
